--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -16,11 +17,13 @@
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-sharp": "^2.8.0",
     "gatsby-source-filesystem": "^2.5.0",
+    "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "url-slug": "^3.0.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
